k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: system-ingress
  namespace: exercise-10
  annotations:
    kubernetes.io/ingress.class: "nginx" 
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
      - path: /health
        pathType: Prefix
        backend:
          service:
            name: api-service
            port:
              number: 80
